# mlDeltatb

./: .gitignore  DSgen_options_template.json  README.md  config_template.json  pyproject.toml
mlDeltatb/: .gitattributes  runTests.py
mlDeltatb/BackpropOptimization/: ATKUtils.py  BandsOps.py  Corrections.py  Loss.py
mlDeltatb/Common/: ATKCorrection.py  DatasetProcessing.py  ETBStartingPoint.py  Model.py
mlDeltatb/Descriptors/: Descriptor.py  DescriptorTest.py
mlDeltatb/TightBindingFitting/: EmpiricalSlaterKosterUtilities.py  EmpiricalSlaterKosterUtilitiesTest.py  Fitter.py  FitterTest.py
scripts/: Bandgap_through_atk.py  Compute_new_bandstructure.py  Extract_gap.py  Fit_III-V.py  PreTraining.py  Training.py  Training_set_generation.py  Validating.py
scripts/fitting_results/: start_basis_set.pickle
scripts/fitting_targets/: AlAs.hdf5  AlSb.hdf5  GaAs.hdf5  GaSb.hdf5  script_for_AlAs.py  script_for_AlSb.py  script_for_GaAs.py  script_for_GaSb.py
