[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlDeltatb"
version = "0.0.1"
authors = [
    {name="Daniele Soccodato"}
]
dependencies = [
    "tensorflow >= 2.12.0"	
]
description = "Machine learning augmented tight binding"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
